# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.77 $ $Date: 2008-09-16 07:13:50 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-09-16  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt source code to match new constants

2008-09-14  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt source code to match new constants
        * Add files with MIME type constants in directory "constant/abstraction/mime/";
            their values are partly redundant to the CYBOL abstraction constants
            in directory "constant/abstraction/cybol/", but have been introduced
            to allow source code files (e.g. converters) to reference MIME constants
            independently of CYBOL constants
        * Rename files and directory "linux_console" into "gnu_linux_console"
        * Move files "xdt_field_cyboi_name.c" and "xdt_record_cyboi_name.c"
            from directory "constant/name/xdt/" into directory "constant/name/cybol/xdt/"
        * Rename file "keyboard_cybol_name.c" into "keyboard_key_cybol_name.c"

2008-09-12  Christian Heller  <christian.heller@tuxtax.de>
        * Adapt automake files to new directory structure
        * Remove xml declaration (first line) from all CYBOL example files;
            when no such declaration exists, a Unicode encoding is assumed,
            as defined by a Unicode Byte Order Mark before the document's first character;
            if the mark does not exist, UTF-8 encoding is assumed;
            CYBOL files are UTF-8 encoded, so the declaration is not needed