@@ -14,9 +14,12 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.77 $ $Date: 2008-09-16 07:13:50 $ $Author: christian $
+# @version $Revision: 1.78 $ $Date: 2008-09-17 14:44:22 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2008-09-17  Christian Heller  <christian.heller@tuxtax.de>
+        * Continue implementing CYBOL parser in file "cybol_converter.c"
 
 2008-09-16  Christian Heller  <christian.heller@tuxtax.de>
         * Adapt source code to match new constants
